Actualización 20 feb 19 11:57am

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ Impresión, letreros luminosos toluca, rotulación, decoración locales , impres
 		<link rel="stylesheet" type="text/css" href="css/slicknav.css">
 		<link rel="stylesheet" href="css/prettyPhoto.css" type="text/css" media="screen" title="prettyPhoto main stylesheet" charset="utf-8" />
 		<link rel="stylesheet" type="text/css" href="css/style.css">
-		<link rel="shortcut icon" href="images/favicon.ico">
+		<link rel="shortcut icon" href="images/apple-icon-114x114.png">
 
 		<script type="text/javascript" src="js/jquery-1.8.3.min.js"></script>
 
@@ -54,6 +54,42 @@ Impresión, letreros luminosos toluca, rotulación, decoración locales , impres
 			});
 		</script>
 
+              <script type="application/ld+json">
+                    {
+                      "@context": "http://schema.org",
+                      "@type": "LocalBusiness",
+                      "image": "http://www.garcini.com/images/Pic.png",
+                      "@id": "http://www.garcini.com/",
+                      "name": "Marketing y advertising  en Toluca y Metepec",
+                      "address": {
+                        "@type": "PostalAddress",
+                        "streetAddress": "Leona Vicario 13, Col. La Purísima, Edo Mex.",
+                        "addressLocality": "Metepec",
+                        "addressRegion": "MEX",
+                        "postalCode": "50075",
+                        "addressCountry": "MX"
+                      },
+                      "geo": {
+                        "@type": "GeoCoordinates",
+                        "latitude": 19.271159,
+                        "longitude": -99.628537,
+                      },
+                      "url": "http://www.garcini.com",
+                      "telephone": "7225412255",
+                      "openingHoursSpecification": [
+                        {
+                          "@type": "OpeningHoursSpecification",
+                          "dayOfWeek": [
+                            "Monday",
+                            "Friday"
+                          ],
+                          "opens": "10:00",
+                          "closes": "19:30"
+                        }
+                      ]
+                    }
+          </script>
+
 	</head>
 	<body>
 
@@ -66,7 +102,7 @@ Impresión, letreros luminosos toluca, rotulación, decoración locales , impres
 			<div class="row">
 				<div class="logo col-md-4">
 					<div>
-						<a href="http://refillcreativo.com.mx/">
+						<a href="http://garcini.com/">
 							<img src="images/logo.png" alt="Imprenta Toluca y Metepec, letreros luminosos, impresion vinil, lonas |  www.publicidadtoluca.com |">
 						</a>
 					</div>
@@ -74,10 +110,11 @@ Impresión, letreros luminosos toluca, rotulación, decoración locales , impres
 				<div class="col-md-8">
 					<div class="navmenu"style="text-align: center;">
 						<ul id="menu">
-							<li class="active" ><a href="#home">Inicio</a></li>
+							<li class="active" ><a href="#home">Bienvenido</a></li>
 							<!--<li><a href="#about">Nosotros</a></li>-->
-							<li><a href="#project">Proyectos</a></li>
-							<li><a href="#news">Servicios</a></li>
+							<li><a href="#project">Servicios</a></li>
+							<li><a href="#news">Portafolio</a></li>
+              <li><a href="#news">Promociones</a></li>
 							<li class="last"><a href="#contact">Contacto</a></li>
 							<!--li><a href="#features">Features</a></li-->
 						</ul>
@@ -193,7 +230,7 @@ Nosotros lo hacemos posible
 				<div class="col-md-4 b1">
 						<img class="img-responsive" src="images/picTeam/picT1.png" alt="Publicidad Toluca | Agencia publicidad Toluca | http://www.publicidadtoluca.com | campañas publicitarias | branding Toluca">
 						<h4>Campañas  de publicidad web</h4>
-						<h5>Refill</h5>
+						<h5>Garcini</h5>
 						<p>
 
 Estar en internet en estos días es fundamental, y atraer clientes a través de internet suena lo mas lógico,¿verdad? Nosotros podemos hacer campañas para traducir clics en ventas somos expertos en hacer notar tu marca en internet
@@ -206,7 +243,7 @@ Estar en internet en estos días es fundamental, y atraer clientes a través de 
 				<div class="col-md-4">
 						<img class="img-responsive" src="images/picTeam/picT2.png" alt="Publicidad Toluca | Agencia publicidad Toluca | http://www.publicidadtoluca.com | campañas publicitarias | branding Toluca">
 						<h4>Diseño publicitario</h4>
-						<h5>Refill</h5>
+						<h5>Garcini</h5>
 						<p>
 
 
@@ -220,7 +257,7 @@ El diseño publicitario puede multiplicar tus ventas, es cuestión de poder comu
 				<div class="col-md-4 b3">
 						<img class="img-responsive" src="images/picTeam/picT3.png" alt="Publicidad Toluca | Agencia publicidad Toluca | http://www.publicidadtoluca.com | campañas publicitarias | branding Toluca">
 						<h4>Campañas  de publicidad </h4>
-						<h5>Refill</h5>
+
 						<p>
 
 
@@ -335,7 +372,7 @@ Consideran que el diseño ha servido para producir un aumento positivo en su fac
 							<h3>Garantía  de calidad.</h3>
 							<p>
 
-En Refill creativo la calidad es vital por eso contamos con certificaciones como Google Partner, Adobe Certified Associated, SEO Certified, con lo que garantiza que el proyecto sea desarrollado por expertos.
+En Garcini la calidad es vital por eso contamos con certificaciones como Google Partner, Adobe Certified Associated, SEO Certified, con lo que garantiza que el proyecto sea desarrollado por expertos.
 </p>
 						</div>
 					</div>
@@ -652,14 +689,14 @@ mándanos un mail<a class="readMore" href="#">Cotizar <i class="fa fa-angle-righ
 					<ul>
 
             <li><a href="https://goo.gl/maps/hNg3b6nG86T2"><i class="fa fa-home"></i>Leona Vicario 13, Col. La Purísima <br> &nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;Metepec , Edo Mex.</li></a>
-            <li><a href="tel:7291027070"><i class="fa fa-phone"></i>&nbsp;Oficina</li></a>
+            <li><a href="tel:7291027070"><i class="fa fa-phone"></i>&nbsp;Oficina (729) 10-270-70</li></a>
 
-            <li><a href="https://wa.me/7225412255"><i class="fa fa-mobile"></i>&nbsp;&nbsp;&nbsp;Whatsapp</li></a>
+            <li><a href="https://wa.me/7225412255"><i class="fa fa-mobile"></i>&nbsp;&nbsp;&nbsp;Whatsapp (722) 54-122-55</li></a>
 
             <li><a href="mailto:contacto@garcini.com.mx"><i class="fa fa-envelope"></i>&nbsp;contacto@garcini.com.mx</li></a>
 						<!--<li><i class="fa fa-twitter"></i>Twitter</li></a>-->
             <li><i class="fa fa-clock-o"></i>&nbsp;&nbsp;Horario de atención 10:00 hrs a 19:00 hrs </li></a>
-						<!--<li><a href="https://www.facebook.com/refillcreativo"><i class="fa fa-facebook-square"></i>Facebook</li></a>-->
+						<!--<li><a href="https://www.facebook.com/Garcini"><i class="fa fa-facebook-square"></i>Facebook</li></a>-->
 
 					</ul>
 				</div>
