Actualizacion 20 feb 19 1:50pm

--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
 Impresión, letreros luminosos toluca, rotulación, decoración locales , impresion digital,  imprenta, rotulos, imprenta, impresora, anuncios luminosos, lona para toldo, letras corpóreas, letreros, impresiones, imprenta digital, lonas publicitarias toluca, rotulos, luminosos, carteles luminosos, Toluca, Metepec, letreros publicitarios, carteles publicitarios, artes graficas,
 ">
 
+<!--Metas open grahp-->
+	<meta property="og:title" content="Diseño publicitario en Toluca y Metepec"/>
+	<meta property="og:description" content="Diseño Publicitario en Toluca y Metepec, diseño, logotipos, branding, identidad, diseño corporativo."/>
+    <meta property="og:type" content="article">
+	<meta property="og:image" content="http://garcini.com/images/picAbout/aboutP2.png"/>
+	<meta property="og:site_name" content="http://garcini.com/"/>
+	<meta property="og:url" content="http://garcini.com/produccion-grafica.html" />
+
 
 
 		<meta charset="utf-8" />
@@ -54,6 +62,18 @@ Impresión, letreros luminosos toluca, rotulación, decoración locales , impres
 			});
 		</script>
 
+    <meta name="google-site-verification" content="zN4rtMSg-_k6h7g59blTUQF8IxXwF3qJPabWfpw1m8Q" />
+
+              <!-- Global site tag (gtag.js) - Google Analytics -->
+          <script async src="https://www.googletagmanager.com/gtag/js?id=UA-134775240-1"></script>
+          <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'UA-134775240-1');
+          </script>
+
               <script type="application/ld+json">
                     {
                       "@context": "http://schema.org",
@@ -89,6 +109,8 @@ Impresión, letreros luminosos toluca, rotulación, decoración locales , impres
                       ]
                     }
           </script>
+
+          
 
 	</head>
 	<body>
