Actualizacion 20 feb 6:09pm

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es-MX">
   <head>
 
 
-        <title>Marketing y advertising  en Toluca y Metepec, letreros luminosos, impresion vinil, lonas |  www.garcini.com |</title>
+        <title>Marketing y advertising  en Toluca y Metepec, letreros luminosos, impresion vinil, lonas |  www.garcini.com.mx |</title>
 
 
         <meta name="descrption" content="Imprenta Toluca y Metepec, letreros luminosos, impresion vinil, lonas,Impresión, letreros luminosos toluca, rotulación, decoración locales , impresion digital,  imprenta, rotulos, imprenta, impresora, anuncios luminosos, lona para toldo, letras corpóreas, letreros, impresiones, imprenta digital, lonas publicitarias toluca, rotulos, luminosos, carteles luminosos, Toluca, Metepec, letreros publicitarios, carteles publicitarios, artes graficas">
@@ -18,8 +18,8 @@ Impresión, letreros luminosos toluca, rotulación, decoración locales , impres
 	<meta property="og:description" content="Diseño Publicitario en Toluca y Metepec, diseño, logotipos, branding, identidad, diseño corporativo."/>
     <meta property="og:type" content="article">
 	<meta property="og:image" content="http://garcini.com/images/picAbout/aboutP2.png"/>
-	<meta property="og:site_name" content="http://garcini.com/"/>
-	<meta property="og:url" content="http://garcini.com/produccion-grafica.html" />
+	<meta property="og:site_name" content="http://garcini.com.mx/"/>
+	<meta property="og:url" content="http://garcini.com.mx/" />
 
 
 
@@ -110,7 +110,7 @@ Impresión, letreros luminosos toluca, rotulación, decoración locales , impres
                     }
           </script>
 
-          
+
 
 	</head>
 	<body>
@@ -596,79 +596,6 @@ Gracias a sistemas de medición en sitios web podemos saber información de los 
 					});
 				});
 			</script>
-		</div>
-    </div>
-
-    <!--news start-->
-
-    <div id="news">
-    	<div class="line4">
-			<div class="container">
-				<div class="row Ama">
-					<div class="col-md-12">
-					<h3>¡Servicios Adicionales!</h3>
-					<p>Servicios adicionales. Ofrecemos una opción completa en para lanzar una campaña publicitaria exitosa, conoce nuestras opciones</p>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="container">
-				<div class="row news">
-					<div class="col-md-6  text-left">
-					<img class="img-responsive picsGall" src="images/picNews/news1.jpg" alt="Demo stands,Banners, display, stands, Exhibidores, Muros Toluca, diseño de imagen, stand publicitario, Toluca y Metepec, banner publicitario."/>
-					<h3>Demo Stands y Banners</h3>
-
-					<p>Demo stands,Banners, display, stands, Exhibidores, Muros Toluca, diseño de imagen, stand publicitario, Toluca y Metepec, banner publicitario.<a class="readMore" href="#contact">Cotizar<i class="fa fa-angle-right"></i></a></p>
-					<hr class="hrNews">
-					</div>
-					<div class="col-md-6 text-right">
-					<img class="img-responsive picsGall" src="images/picNews/news2.jpg" alt="Renta de espectaculares Toluca, espectaculares Metepec, espectaculares Lerma, espectaculares, anuncios publicitarios, mercadotecnia, autobuses rotulados, vallas móviles, creatividad, publicidad, medios, carteleras, anuncios, anuncio publicitario, relaciones publicas, espectaculares, campañas, publicitarias, publicista, carteles publicitarios, estrategias de publicidad, ejemplos de publicidad| http://publicidadtoluca.com | identidad corporativa | logotipos"/>
-					<h3>Espectaculares y carteleras</h3>
-
-					<p>Renta de espectaculares Toluca, espectaculares Metepec, espectaculares Lerma, espectaculares, anuncios publicitarios, mercadotecnia, autobuses rotulados, vallas móviles, creatividad, publicidad, medios, carteleras, anuncios, anuncio publicitario, relaciones publicas, espectaculares, campañas, publicitarias, publicista, carteles publicitarios, estrategias de publicidad, ejemplos de publicidad, . <a class="readMore" href="#contact">Cotizar<i class="fa fa-angle-right"></i></a></p>
-					<hr class="hrNews">
-					</div>
-				</div>
-			</div>
-			<div class="container">
-				<div class="row news2 news">
-					<div class="col-md-6 text-left">
-					<img class="img-responsive picsGall" src="images/picNews/news3.jpg" alt="Publicidad Toluca | Agencia publicidad Toluca | http://www.publicidadtoluca.com | campañas publicitarias | branding Toluca"/>
-					<h3>Diseño web </h3>
-
-					<p>Una campaña completa para incentivar ventas es nuestra especialidad, podemos crear un plan exclusivo para las necesidades de tu marca con diseño web en toluca. <a class="readMore" href="#contact">Cotizar <i class="fa fa-angle-right"></i></a></p>
-					<hr class="hrNews">
-					</div>
-					<div class="col-md-6 text-right">
-					<img class="img-responsive picsGall" src="images/picNews/news4.jpg" alt="Agencia diseño gráfico Toluca y Metepec | www.publicidadtoluca.com |, diseño, logotipos, branding, identidad, diseño"/>
-					<h3>Diseño Grafico </h3>
-
-					<p>Somos tu agencia diseño gráfico en Toluca y Metepec especialistas en logotipos, branding, identidad, diseño. <a class="readMore" href="#contact">Cotizar<i class="fa fa-angle-right"></i></a></p>
-					<hr class="hrNews">
-					</div>
-				</div>
-			</div>
-			<!--<div class="container">
-				<div class="row news2 news">
-					<div class="col-md-6 text-left">
-					<img class="img-responsive picsGall" src="images/picNews/news5.jpg"/>
-					<h3 ><a href="#">DOS MAS</a></h3>
-
-					<p>Llámanos y hagamos crecer tu negocio
-mándanos un mail<a class="readMore" href="#">Cotizar <i class="fa fa-angle-right"></i></a></p>
-					<hr class="hrNews">
-					</div>-->
-
-				</div>
-			</div>
-			<div class="container">
-			<div class="row cBtn">
-				<div class="col-md-12" style="text-align: center; margin-bottom: -90px; z-index: 10;">
-					<ul class="mNews">
-						<li class="dowbload bhide2"><a href="#contact"><i class="fa fa-arrow-down"></i>Aumentar mis ventas</a></li>
-					</ul>
-				</div>
-			</div>
 		</div>
     </div>
 
