--- a/error404.html
+++ b/error404.html
@@ -1,1 +1,109 @@
-<img src="images/404img.jpeg" height="100%" width="1400">
+<!--<img src="images/404img.jpeg" height="100%" width="1400">-->
+
+
+
+<!DOCTYPE html>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
+<link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+<link rel="stylesheet" type="text/css" href="css/font-awesome.css">
+<link rel='stylesheet' id='camera-css'  href='css/camera.css' type='text/css' media='all'>
+
+<link rel="stylesheet" type="text/css" href="css/slicknav.css">
+<link rel="stylesheet" href="css/prettyPhoto.css" type="text/css" media="screen" title="prettyPhoto main stylesheet" charset="utf-8" />
+<link rel="stylesheet" type="text/css" href="css/style.css">
+<style>
+* {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  font-family: Arial;
+  font-size: 17px;
+}
+
+#myVideo {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  min-width: 20%;
+  min-height: 100%;
+}
+
+.content {
+  position: fixed;
+  bottom: 0;
+  background: rgba(0, 0, 0, 0.5);
+  color: #f1f1f1;
+  width: 100%;
+  padding: 20px;
+}
+
+#myBtn {
+  width: 200px;
+  font-size: 18px;
+  padding: 10px;
+  border: none;
+  background: #000;
+  color: #fff;
+  cursor: pointer;
+}
+
+#myBtn:hover {
+  background: #ddd;
+  color: black;
+}
+</style>
+</head>
+<body>
+
+<video autoplay muted loop id="myVideo">
+  <source src="images/404garci.mp4" type="video/mp4">
+  Your browser does not support HTML5 video.
+</video>
+
+
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+<div class="col-md-12 cBtn  lb" style="text-align: center;">
+  <ul class="load_more_cont ">
+
+    <li class="buy">
+      <a href="http://refillcreativo.website/GARCINIWEB/">
+        <i class="fa fa-arrow-circle-left"></i>Volver ahora
+      </a>
+    </li>
+  </ul>
+</div>
+
+<div class="content">
+  <center><h1>Presiona el boton para regresar a garcini.com.mx</h1></center>
+  <p></p>
+
+
+
+  <!--<button id="myBtn" onclick="myFunction()">Volver ahora</button>-->
+</div>
+
+<script>
+var video = document.getElementById("myVideo");
+var btn = document.getElementById("myBtn");
+
+function myFunction() {
+  if (video.paused) {
+  <a  href="http://refillcreativo.website/GARCINIWEB/">
+    btn.innerHTML = "Pause";
+  } else {
+    video.pause();
+    btn.innerHTML = "Play";
+
+
+  }
+}
+</script>
+
+</body>
+</html>
